fix: align navbar with logo icon

--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -33,8 +33,8 @@ header{
         display: flex;
         flex-direction: column;
         align-items: center;
-        // justify-content: center;
-        padding-top: 25%;
+
+        // padding-top: 25%;
         position: fixed;
         // top: 0;
         right: 0;
@@ -62,10 +62,9 @@ header{
         ul{
             list-style-type: none;
             // display: block;
-            margin: 0;
+            margin-top: 25%;
+            line-height: 4rem;
             padding: 0;
-            line-height: 3.2rem;
-            
             // padding: 2rem 3rem;
             text-align: center;
             li{
